Input screen not showing big numbers resolved handled multiple operator inputing +*- wont work it will be replaced with the last operator

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@
 #screen{
   height: 100px;
   border-radius: 10px;
+  border:2px solid black;
   text-align: right;
   font-size: 40px;
-  outline: none;
+  overflow:auto;
 }
 
 
